--- a/이나은님_통계분석.Rmd
+++ b/이나은님_통계분석.Rmd
@@ -39,7 +39,7 @@ library(wPerm)
 
 options(scipen = 999) # turn-off scientific notation like 1e+48
 options(tibble.width = Inf)
-source("./functions.R")
+# source("./functions.R")
 # source("./functions_global.R")
 ```
 
