--- a/이나은님_표.Rmd
+++ b/이나은님_표.Rmd
@@ -42,7 +42,6 @@ library(wPerm)
 options(scipen = 999) # turn-off scientific notation like 1e+48
 options(tibble.width = Inf)
 theme_set(theme_bw())
-# theme_set(theme(axis.line = element_blank()))
 source("./functions_table.R")
 ```
 
@@ -103,19 +102,19 @@ for (times in list(c("30초", "1분", "2분", "4분"), c("30초", "1분", "2분"
 # 분석 1
 
 ```{r}
-df %>% kbl() %>% kable_paper() %>% scroll_box(width = "1500px", height = "800px")
+df %>% arrange(지표) %>% kbl() %>% kable_paper() %>% scroll_box(width = "1500px", height = "800px")
 ```
 
 # 분석 2
 
 ```{r}
-df2 %>% kbl() %>% kable_paper() %>% scroll_box(width = "1500px", height = "700px")
+df2 %>% arrange(지표) %>% kbl() %>% kable_paper() %>% scroll_box(width = "1500px", height = "700px")
 ```
 
 # 분석 3
 
 ```{r}
-df3 %>% kbl() %>% kable_paper() %>% scroll_box(width = "1500px", height = "700px")
+df3 %>% arrange(지표) %>% kbl() %>% kable_paper() %>% scroll_box(width = "1500px", height = "700px")
 ```
 
 # 시간에 따른 피부 장벽 기능 지표 변화
